fix image squishing

--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ a {
     font-size: clamp(1rem, 10cqw, 1.4rem);
     line-height: 1.2;
   }
+
+  img {
+    object-fit: contain;
+  }
 }
 
 .divider {
